# geos-kernel

./: .gitignore  CMakeLists.txt  Makefile  gdt.c  idt.c  irq.asm  irq.c  isr.asm  isr.c  kernel.asm  kernel.c  link.ld  system.h
graphics/: graphics.c  graphics.h  gui.c  gui.h
libc/: CMakeLists.txt  interface.c  interface.h  kb.c  kb.h  libc.md  memset.c  stdc.h  time.c  time.h
